--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE hmtl>
 <html>
     <head>
-        <title>Harshit Tripathi Website</title>
+        <title>Harshit Tripathi Website.</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Bundelkhand Public School">
