--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header>
                 <div class="container">
                      <img id="logo" src="img/download.jpeg" alt="logo">
-                  <h1>BUNDELKHAND ACADEMY</h1>
+                  <h1>*BUNDELKHAND ACADEMY*</h1>
 			
                     <p><b>Senior Secondary School, ShivajiNagar Jhansi</b><br><br><marquee>Opening Minds, Progressing Technologies, Creating Brighter Futures...</marquee></p>
                 </div>
